--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -47,6 +47,11 @@ img.project-thumbnail {
     justify-content: space-between;
     align-items: center;
     margin-top: 90px;
+    margin-bottom: 150px;
+  }
+
+  h3 {
+    margin-top: 100px;
   }
 
  .team-show p {
@@ -57,5 +62,7 @@ img.project-thumbnail {
     margin-bottom: 100px;
     margin-top: 80px;
   }
+
+
 
   
