--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,7 +42,7 @@
  @import 'third_party/spell_checker.min.css';
 
  @import "materialize/components/color-variables";
- $primary-color: color("green", "accent-2") !default;
+ $primary-color: color("teal", "darken-3") !default;
  $secondary-color: color("deep-purple", "accent-2") !default;
  @import 'materialize';
  @import "https://fonts.googleapis.com/icon?family=Material+Icons";
@@ -51,6 +51,7 @@
  @import"projects";
  @import"shoutouts";
  @import"notes";
+ @import"users";
 
  html {
   height: 100%;
@@ -64,9 +65,18 @@
  } 
 
  body {
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
-  background-color: #e8f5e9;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    background-color: #f5f5f5;
+ }
+
+ .logo-login {
+    width: 180px;
+    height: 180px;
+ }
+
+ .card-panel.login {
+   background-color: #00695c;
  }
 
  img.avatar {
@@ -113,6 +123,7 @@
     display:inline-block;
     margin: 5px;
   }
+  
 
 
 
