--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,34 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.user-img-profile{
+    display: inline;
+}
+.tags p {
+    display: inline-block;
+    background:#bdbdbd;
+    border-radius: 10px;
+    padding: 7px;
+    margin: 3px 0;
+}
+
+.bio p {
+    font-family: 'Do Hyeon', sans-serif;
+    font-size: 1.2rem;
+}
+
+.user-shoutout {
+    display: inline;
+}
+
+.user-shoutout-body {
+    margin: 0;
+}
+
+.user-projects {
+    overflow-y: scroll;
+}
+
+
+
